# somethingelse

./: .gitignore  README.md  build.gradle  pyproject.toml  settings.gradle
src/main/java/com/mattjhussey/somethingelse/: AdsbService.java  Aircraft.java  MainController.java  MapApplication.java
src/main/resources/com/mattjhussey/somethingelse/: main-view.fxml  map.html
src/somethingelse/: adsb.py  main.py
src/somethingelse/resources/: map.html
src/test/java/com/mattjhussey/somethingelse/: MapApplicationTest.java
tests/: test_adsb.py  test_main.py
